--- a/lottery-interfaces/src/main/resources/application.yml
+++ b/lottery-interfaces/src/main/resources/application.yml
@@ -5,9 +5,21 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/bugstack?useUnicode=true
+    url: jdbc:mysql://127.0.0.1:3306/lottery?useUnicode=true
     driver-class-name: com.mysql.jdbc.Driver
 
 mybatis:
   mapper-locations: classpath:/mybatis/mapper/*.xml
   config-location:  classpath:/mybatis/config/mybatis-config.xml
+
+dubbo:
+  application:
+    name: Lottery
+    version: 1.0.0
+  registry:
+    address: N/A
+  protocol:
+    name: bubbo
+    port: 20880
+  scan:
+    base-packages: cn.itedus.lottery.rpc
