--- a/lottery-interfaces/src/main/resources/application.yml
+++ b/lottery-interfaces/src/main/resources/application.yml
@@ -17,7 +17,7 @@ dubbo:
     name: Lottery
     version: 1.0.0
   registry:
-    address: multicast://224.5.6.7:1234
+    address: N/A # multicast://224.5.6.7:1234
   protocol:
     name: bubbo
     port: 20880
