--- a/lottery-interfaces/src/main/resources/application.yml
+++ b/lottery-interfaces/src/main/resources/application.yml
@@ -5,21 +5,22 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/lottery?useUnicode=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/lottery?useUnicode=true&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis:
   mapper-locations: classpath:/mybatis/mapper/*.xml
   config-location:  classpath:/mybatis/config/mybatis-config.xml
 
+# Dubbo 广播方式配置
 dubbo:
   application:
     name: Lottery
     version: 1.0.0
   registry:
-    address: N/A # multicast://224.5.6.7:1234
+    address: N/A #multicast://224.5.6.7:1234
   protocol:
-    name: bubbo
+    name: dubbo
     port: 20880
   scan:
     base-packages: cn.itedus.lottery.rpc
