--- a/lottery-domain/pom.xml
+++ b/lottery-domain/pom.xml
@@ -20,8 +20,7 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>5.8.16</version>
-        </dependency>
-        <dependency>
+        </dependency>        <dependency>
             <groupId>cn.itedus.lottery</groupId>
             <artifactId>lottery-infrastructure</artifactId>
             <version>1.0-SNAPSHOT</version>
