--- a/lottery-domain/pom.xml
+++ b/lottery-domain/pom.xml
@@ -11,6 +11,8 @@
 
     <artifactId>lottery-domain</artifactId>
 
+    <packaging>jar</packaging>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -19,12 +21,22 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.8.16</version>
-        </dependency>        <dependency>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
+        <!-- 业务包 -->
+        <dependency>
             <groupId>cn.itedus.lottery</groupId>
             <artifactId>lottery-infrastructure</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.itedus.lottery</groupId>
+            <artifactId>lottery-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
