--- a/lottery-domain/pom.xml
+++ b/lottery-domain/pom.xml
@@ -26,21 +26,18 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
-
-        <!-- 业务包 -->
-        <!--        <dependency>-->
-        <!--            <groupId>cn.itedus.lotteryy/groupId>-->
-        <!--            <artifactId>lottery-infrastructure</artifactId>-->
-        <!--            <version>1.0-SNAPSHOT</version>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
         <dependency>
             <groupId>cn.itedus.lottery</groupId>
             <artifactId>lottery-common</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
         </dependency>
     </dependencies>
 
