--- a/lottery-application/pom.xml
+++ b/lottery-application/pom.xml
@@ -11,5 +11,14 @@
 
     <artifactId>lottery-application</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.itedus.lottery</groupId>
+            <artifactId>lottery-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
 
 </project>
