--- a/lottery-application/pom.xml
+++ b/lottery-application/pom.xml
@@ -10,7 +10,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>lottery-application</artifactId>
-
     <dependencies>
         <dependency>
             <groupId>cn.itedus.lottery</groupId>
@@ -20,5 +19,20 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>lottery-application</finalName>
+        <plugins>
+            <!-- 编译plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                    <compilerVersion>1.8</compilerVersion>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
